--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
 
     <footer>
         <p class="desc">DESPUES DE 15 DIAS NATURALES DE LA NOTIFICACION AL MEDIO DE CONTACTO SE GENERARA UN COSTO DIFERENTE</p>
-        <div>
+        <div class="redes">
             <a href="https://www.facebook.com/CompulapTuxtla"><img class="facebook" src="./icons/Facebook.svg.webp" alt="Logo facebook"></a>
             <a href="https://goo.gl/maps/BA1kKirNSuVMUDtp6"><img class="maps" src="./icons/maps.png" alt="Logo maps"></a>
-            <a href="#"><p class="gmail">compulap.08@gmail.com</p></a>
-            <a href="https://wa.me/+5219612654065?text=Hola%20buenas%20tardes,"><img class="whatsApp" src="./icons/whatsapp.png" alt="Logo whatsApp"></a>
+            <div class="gmail">
+                <p>CEL: 961 265 4065</p>
+                <p>compulap.08@gmail.com</p>
+            </div>
+            <a href="https://wa.me/+5219612654065?text=Hola%20buenas%20tardes,"><img class="whatsApp" src="./icons/whatsapp.jpeg" alt="Logo whatsApp"></a>
         </div>
     </footer>
 </body>
