--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <p class="localitation">3 Poniente Norte 210-A, Teran Tuxtla Gutierrez, Chiapas, 29050</p>
             </div>
             <div class="right">
-                <label class="label" for="date">Fecha</label>
+                <label class="label" for="date">Fecha:</label>
                 <input class="option" id="date" name="date" type="date">
                 <br>
-                <label class="label" for="time">Hora</label>
+                <label class="label" for="time">Hora:</label>
                 <input class="option" id="time" name="time" type="time">
             </div>   
         </section>
@@ -41,11 +41,11 @@
                 <br>
                 <input type="text" name="client-name" id="client-name" placeholder="nombre del cliente">
                 <br><br><br>
-                <label class="contact" for="contact">Medio de contacto</label>
+                <label class="contact" for="contact">Medio de contacto:</label>
                 <br>
                 <input type="text" name="contact" id="contact" placeholder="Medios de contacto">  
                 <br><br><br>
-                <label class="type-lap" for="lap">Tipo de dispositivo</label>
+                <label class="type-lap" for="lap">Tipo de dispositivo:</label>
                 <br>
                 <input type="text" id="lap" placeholder="Tipo de dispositivo">
                 <br><br><br>
@@ -53,7 +53,7 @@
                 <br>
                 <input type="text" name="problem" id="problem" placeholder="¿Cual es el problema del dispositivo?" size="30">
                 <br><br><br>
-                <label class="accesorios" for="accesori">Accesorios</label>
+                <label class="accesorios" for="accesori">Accesorios:</label>
                 <br>
                 <input type="text" name="accesori" id="accesori" placeholder="¿Que accesorios tenia?" size="30">
             </form>
