--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compulap</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./html2pdf.bundle.min.js"></script>
-    <script src="./main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/html2pdf.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
     <header>
