--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/html2pdf.bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <style>
+        header{
+            background-image: url("icons/header.jpeg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 100%;
+            height: 100px;
+            margin-bottom: 50px;
+        }
+        main{
+            width: 100%;
+            height: 600px;
+            margin: 0 0 130px 0;
+            background-image: url("./icons/logo.png");
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -68,10 +87,10 @@
         <div class="redes">
             <a href="https://www.facebook.com/CompulapTuxtla"><img class="facebook" src="./icons/Facebook.svg.webp" alt="Logo facebook"></a>
             <a href="https://goo.gl/maps/BA1kKirNSuVMUDtp6"><img class="maps" src="./icons/maps.png" alt="Logo maps"></a>
-            <a href="https://wa.me/+5219612654065?text=Hola%20buenas%20tardes,"><img class="whatsApp" src="./icons/whatsapp.jpeg" alt="Logo whatsApp"></a>
+            <a href="https://wa.me/+5219612654065?text=Hola%20buenas%20tardes,"><img class="whatsApp" src="./icons/whatsapp.png" alt="Logo whatsApp"></a>
             <div class="gmail">
                 <p>CEL: 961 265 4065</p>
-                <p>compulap.08@gmail.com</p>
+                <p>Compulap.08@gmail.com</p>
             </div>
         </div>
     </footer>
