--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
                 <br>
                 <p class="localitation">3 Poniente Norte 210-A, Teran Tuxtla Gutierrez, Chiapas, 29050</p>
             </div>
-            <div class="right">
-                <label class="label" for="date">Fecha:</label>
-                <input class="option" id="date" name="date" type="date">
-                <br>
-                <label class="label" for="time">Hora:</label>
-                <input class="option" id="time" name="time" type="time">
-            </div>   
+            <form action="" autocomplete="off" class="myform">
+                <div class="right">
+                    <label class="label" for="date">Fecha:</label>
+                     <input class="option" id="date" name="date" type="date">
+                     <br>                    <label class="label" for="time">Hora:</label>
+                     <input class="option" id="time" name="time" type="time">
+                 </div> 
+            </form>
         </section>
 
         <section class="img-back">
-            <form action="">
+            <form action="" class="myform" autocomplete="off">
                 <h2>Recibo equipo de computo.</h2>
                 <label  class="client-name" for="client-name">A nombre de:</label>
                 <br>
